# mteb-pt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  propose-task.yml  submit-model.yml
.github/workflows/: ci.yml
examples/: compute_bootstrap_ci.py  quickstart.py  run_headline.py
mteb_pt/: __init__.py  register.py  stats.py
mteb_pt/tasks/classification/por/: factckbr.py  hate_br.py  offcombr.py  portulex_rrip.py  toxsyn_pt.py  tweet_sent_br.py
mteb_pt/tasks/clustering/por/: juris_tcu_clustering.py  medpt_clustering.py  scielo_clustering.py  stackoverflow_pt.py  wikipedia_pt_categories.py
mteb_pt/tasks/pair_classification/por/: assin_rte.py  infer_br.py
mteb_pt/tasks/reranking/por/: juris_tcu_reranking.py  quati_reranking.py
mteb_pt/tasks/retrieval/por/: br_taxqa_r.py  faq_bacen.py  faquad_ir.py  juris_tcu.py  juris_tcu_reranking.py  medpt.py  quati.py  quati_reranking.py
mteb_pt/tasks/sts/por/: assin_sts.py
scripts/: VERDA_RUN.md  make_quati_50k.py  run_mteb_gemini.py  run_mteb_hfresume.py  run_mteb_mistral.py  run_mteb_openai.py  run_mteb_por_v2.py  run_mteb_vercel.py  run_mteb_voyage.py  run_mteb_voyage_rerank.py  upload_results_to_hf.py  verda_fleet_hf.sh
tests/: test_examples_import.py  test_register.py  test_stats.py
