[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mteb-pt"
version = "2.0.0"
description = "MTEB Portuguese: a public benchmark for evaluating text embedding models on Brazilian Portuguese"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Tardelli Stekel", email = "stekel@ifsp.edu.br" },
]
keywords = ["embeddings", "benchmark", "portuguese", "brazilian-portuguese", "mteb", "nlp", "information-retrieval"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
  "Natural Language :: Portuguese (Brazilian)",
]
dependencies = [
  "mteb>=2.12.30,<3.0",
  "transformers>=4.57",
  "sentence-transformers>=5.0",
  "datasets>=3.0",
  "huggingface_hub>=0.24",
  "numpy>=1.24,<2.0",
  "pandas>=2.0",
  "scipy>=1.10",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-timeout>=2.3",
  "ruff>=0.6",
  "mypy>=1.8",
]
viz = [
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/mteb-pt/leaderboard"
Repository = "https://github.com/tardellirs/mteb-pt"
Documentation = "https://github.com/tardellirs/mteb-pt#readme"
"Bug Tracker" = "https://github.com/tardellirs/mteb-pt/issues"
Dataset = "https://huggingface.co/datasets/mteb-pt/mteb-pt-results"
Organization = "https://huggingface.co/mteb-pt"

[tool.setuptools.packages.find]
where = ["."]
include = ["mteb_pt*"]
exclude = ["tests*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
